--- a/final/style.css
+++ b/final/style.css
@@ -40,9 +40,9 @@
 
 #custom-select {
     margin: auto;
-    width: 300px;
+    width: 800px;
     border: 0px solid black;
-    padding: 20px;
+    text-align:center;
 }
 
 .custom-head {
@@ -56,14 +56,15 @@
     margin: auto;
     width: 400px;
     border: 3px solid blue;
-    
     text-align: center;
     font-family: serif;
     font-size: 30px;
     color: blue;
 }
-/*
-.google-visualization-table-td {
-    text-align: center
+
+select {
+  width: 300px;
+  text-align: center;
+  text-align-last: center;
+  /* webkit*/
 }
-*/
